# TSC-Benchmark

./: .gitignore  LICENSE_Version2  README.md  VISUALIZATIONS.md  main.py  pyproject.toml  test_cuda.py
configs/: config.yaml  config_test.yaml
experiments/: auto_tune.py  benchmark.py  cross_validate.py
results/20251211_193336/: config.yaml  summary.json
results/20251211_201031/: config.yaml  summary.json
results/20251211_220536/: config.yaml  summary.json
results/20251211_225647/: config.yaml  summary.json
results/20251211_233415/: summary.json
results/20251212_001253/: config.yaml  summary.json
results/20251212_005915/: config.yaml  summary.json
results/20251212_020515/: config.yaml  summary.json
results/20251212_214307/: config.yaml  summary.json
results/20251213_131609/: summary.json
results/20251213_162807/: config.yaml  summary.json
results/20251213_195727/: config.yaml  summary.json
results/20251213_220929/: config.yaml  summary.json
results/20260114_173327/: results.json
results/20260114_204104/: results.json
results/20260115_012339/: results.json
results/20260115_021406/: results.json
results/20260115_023624/: results.json
results/20260115_031453/: results.json
results/20260115_034146/: results.json
results/20260115_041428/: results.json
results/20260115_044245/: results.json
results/20260115_051551/: results.json
results/20260115_054631/: results.json
results/20260115_061340/: results.json
results/20260115_064344/: results.json
results/20260115_071541/: results.json
results/20260115_075057/: results.json
results/20260115_081514/: results.json
results/20260115_085058/: results.json
results/20260115_091604/: results.json
results/20260115_095556/: results.json
results/20260116_015156/: results.json
results/20260116_021209/: results.json
results/20260116_025029/: results.json
results/20260116_025307/: results.json
results/20260116_033431/: results.json
results/20260116_034422/: results.json
results/20260116_041432/: results.json
results/20260116_044218/: results.json
results/20260116_045519/: results.json
results/20260116_053616/: results.json
results/20260116_053832/: results.json
results/20260116_061713/: results.json
results/20260116_063636/: results.json
results/20260116_065843/: results.json
results/20260116_073441/: results.json
results/20260116_073749/: results.json
results/20260116_081904/: results.json
results/20260116_083219/: results.json
results/20260116_085836/: results.json
results/20260116_092911/: results.json
results/20260116_093823/: results.json
results/20260116_102029/: results.json
results/20260116_102213/: results.json
src/data/: augmentation.py  loader.py
src/models/: autoformer.py  base.py  cats.py  cnn.py  fcn.py  patchtst.py  transformer.py
src/training/: ensemble.py  metrics.py  trainer.py  tta.py
src/utils/: config.py  logger.py  system.py  visualizations.py
tests/: test_cuda.py
