[build-system]                 # Standard: always first for build tools
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]                      # Core project metadata second
name = "tsc-benchmark"
version = "0.1.0"
description = "Neural network benchmarking framework for time series classification"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "torchvision", 
    "torchaudio",
    "aeon",
    "numpy",
    "pandas",
    "scikit-learn",
    "pyyaml",
    "matplotlib",
    "seaborn",
    "tqdm",
    "psutil",
]
[project.optional-dependencies]
dev = [
    "black",
    "ruff", 
    "pytest",
]

[[tool.uv.index]]              # uv config before sources that reference it
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]              # After index definition
torch = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchaudio = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]

# Tool configs last (build, black, ruff, pytest)
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
target-version = ["py313"]

[tool.ruff]
line-length = 120
target-version = "py313"
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v -s"
